--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/Favicon.ico" sizes="any">
     <title>shoesupplier.co.uk // Coming Soon...</title>
   </head>
 <body>
@@ -94,53 +94,61 @@
     }
 
     .brands {
-      margin: clamp(36px, 6vw, 64px) auto 0;
-      max-width: 720px;
-      display: grid;
-      grid-template-columns: 1fr auto 1fr;
-      gap: clamp(18px, 3vw, 36px);
-      align-items: start;
-      text-align: left;
-    }
+  margin: clamp(36px, 6vw, 64px) auto 0;
+  width: 100%;
+  max-width: 560px;              /* smaller container */
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  gap: clamp(14px, 2.5vw, 28px);
+  align-items: start;
+  justify-items: center;         /* centers each column content */
+  text-align: center;            /* centers list text */
+}
 
-    .divider {
-      width: 1px;
-      height: 100%;
-      background: var(--line);
-      justify-self: center;
-      border-radius: 999px;
-      min-height: 220px;
-    }
+.divider {
+  width: 1px;
+  min-height: 240px;
+  background: var(--line);
+  border-radius: 999px;
+  justify-self: center;
+}
 
-    .brand-list {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      font-weight: 700;
-      font-style: italic;
-      font-size: clamp(16px, 1.9vw, 20px);
-      line-height: 1.35;
-      letter-spacing: -0.01em;
-      color: rgba(243, 245, 245, 0.88);
-    }
-    .brand-list li { margin: 6px 0; }
+.brand-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  width: 100%;
+  max-width: 220px;              /* keeps each column tidy */
+  font-weight: 700;
+  font-style: italic;
+  font-size: clamp(16px, 1.9vw, 20px);
+  line-height: 1.5;              /* slightly more even spacing */
+  letter-spacing: -0.01em;
+  color: rgba(243, 245, 245, 0.88);
+}
 
-    /* Mobile layout */
-    @media (max-width: 640px) {
-      .brands {
-        grid-template-columns: 1fr;
-        text-align: center;
-        max-width: 520px;
-      }
-      .divider {
-        width: 100%;
-        height: 1px;
-        min-height: 0;
-        margin: 10px 0;
-      }
-      .brand-list {
-        text-align: center;
-      }
+.brand-list li { margin: 4px 0; }
+
+/* Keep 2 columns on mobile (no stacking) */
+@media (max-width: 640px) {
+  .brands {
+    grid-template-columns: 1fr auto 1fr; /* keep columns */
+    max-width: 94vw;                     /* use viewport width */
+    gap: 12px;
+  }
+
+  .brand-list {
+    max-width: none;                     /* let it shrink */
+    font-size: 14px;                     /* slightly smaller */
+    line-height: 1.45;
+  }
+
+  .divider {
+    min-height: 210px;                   /* match list height-ish */
+  }
+}
+
+
       .bg-icon img {
         right: -35%;
         top: 14%;
@@ -184,7 +192,7 @@
           <li>Divaz</li>
           <li>Base London</li>
           <li>Cole Haan</li>
-          <li>Timberlan Pro</li>
+          <li>Timberland Pro</li>
           <li>Riva</li>
           <li>Sperry</li>
           <li>Hunter</li>
