--- a/index.html
+++ b/index.html
@@ -22,24 +22,39 @@
     /* Reset-ish */
     * { box-sizing: border-box; }
     html, body { height: 100%; }
-    body {
-      margin: 0;
-      font-family: "DM Sans", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      background: radial-gradient(1200px 800px at 20% 15%, rgba(0, 255, 200, 0.08), transparent 60%),
-                  radial-gradient(900px 700px at 80% 20%, rgba(0, 140, 120, 0.12), transparent 55%),
-                  var(--bg);
-      color: var(--text);
-      overflow-x: hidden;
-    }
+
+body {
+  margin: 0;
+  font-family: "DM Sans", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  color: var(--text);
+  overflow-x: hidden;
+  background: var(--bg); /* solid base only */
+}
+
+/* Fixed gradient layer to avoid iOS repaint/repeat artifacts */
+body::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  z-index: -2;
+  pointer-events: none;
+  background:
+    radial-gradient(1200px 800px at 20% 15%, rgba(0, 255, 200, 0.08), transparent 60%),
+    radial-gradient(900px 700px at 80% 20%, rgba(0, 140, 120, 0.12), transparent 55%),
+    var(--bg);
+}
+
 
     .page {
-      position: relative;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: clamp(28px, 4vw, 56px) 18px;
-    }
+  position: relative;
+  min-height: 100vh;
+  min-height: 100svh; /* iOS safe viewport */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: clamp(28px, 4vw, 56px) 18px;
+}
+
 
     /* Background icon */
     .bg-icon {
@@ -132,29 +147,28 @@
 /* Keep 2 columns on mobile (no stacking) */
 @media (max-width: 640px) {
   .brands {
-    grid-template-columns: 1fr auto 1fr; /* keep columns */
-    max-width: 94vw;                     /* use viewport width */
+    grid-template-columns: 1fr auto 1fr;
+    max-width: 94vw;
     gap: 12px;
   }
 
   .brand-list {
-    max-width: none;                     /* let it shrink */
-    font-size: 14px;                     /* slightly smaller */
+    max-width: none;
+    font-size: 14px;
     line-height: 1.45;
   }
 
   .divider {
-    min-height: 210px;                   /* match list height-ish */
+    min-height: 210px;
+  }
+
+  .bg-icon img {
+    right: -35%;
+    top: 14%;
+    width: min(680px, 120vw);
   }
 }
 
-
-      .bg-icon img {
-        right: -35%;
-        top: 14%;
-        width: min(680px, 120vw);
-      }
-    }
 
     /* Respect reduced motion (nothing animated, but keeps things tidy if you add later) */
     @media (prefers-reduced-motion: reduce) {
@@ -198,6 +212,7 @@
           <li>Hunter</li>
         </ul>
       </section>
+      <p class="subcopy">+ many more</p>
     </div>
   </main>
 </body>
