--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@ body::before {
           <li>Hunter</li>
         </ul>
       </section>
-      <p class="subcopy">+ many more</p>
+      <p></p>
+      <p class="subcopy">+<br />many more</p>
     </div>
   </main>
 </body>
