--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ body::before {
         </ul>
       </section>
       <p></p>
-      <p class="subcopy">+<br />many more</p>
+      <p class="subcopy">+ many more</p>
     </div>
   </main>
 </body>
