--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+  <!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -187,31 +187,20 @@ body::before {
       <h1>Coming soon...</h1>
       <p class="subcopy">We’re working on bringing top shoe brands<br />direct to your door.</p>
 
-      <section class="brands" aria-label="Brands">
+      <section class="brands one-col" aria-label="Brands">
         <ul class="brand-list">
-          <li>Muck</li>
-          <li>Hush Puppies</li>
-          <li>Skechers</li>
-          <li>CAT</li>
-          <li>Cotswold</li>
-          <li>Rocket Dog</li>
-          <li>Crocs</li>
-          <li>Amblers Safety</li>
-        </ul>
-
-        <div class="divider" aria-hidden="true"></div>
-
-        <ul class="brand-list">
-          <li>Dunlop</li>
-          <li>Divaz</li>
-          <li>Base London</li>
-          <li>Cole Haan</li>
-          <li>Timberland Pro</li>
-          <li>Riva</li>
-          <li>Sperry</li>
-          <li>Hunter</li>
+          <li>Brooks</li>
+          <li>Saucony</li>
+          <li>adidas</li>
+          <li>HOKA</li>
+          <li>New Balance</li>
+          <li>ASICS</li>
+          <li>Mizuno</li>
+          <li>INOV8</li>
+          <li>On</li>
         </ul>
       </section>
+
       <p></p>
       <p class="subcopy">+ many more</p>
     </div>
