--- a/index.html
+++ b/index.html
@@ -1,200 +1,184 @@
-  <!doctype html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link rel="icon" href="/Favicon.ico" sizes="any">
+    <link rel="icon" href="/Favicon.ico" sizes="any" />
     <title>shoesupplier.co.uk // Coming Soon...</title>
   </head>
-<body>
-  <style>
-    /* Import DM Sans without needing to touch <head> */
-    @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap");
 
-    :root {
-      --bg: #0e1413;      /* deep charcoal/green */
-      --text: #f3f5f5;    /* off-white */
-      --muted: rgba(243, 245, 245, 0.8);
-      --line: rgba(243, 245, 245, 0.18);
-      --maxw: 980px;
-    }
+  <body>
+    <style>
+      /* Import DM Sans without needing to touch <head> */
+      @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap");
 
-    /* Reset-ish */
-    * { box-sizing: border-box; }
-    html, body { height: 100%; }
+      :root {
+        --bg: #0e1413; /* deep charcoal/green */
+        --text: #f3f5f5; /* off-white */
+        --muted: rgba(243, 245, 245, 0.8);
+        --maxw: 980px;
+      }
 
-body {
-  margin: 0;
-  font-family: "DM Sans", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-  color: var(--text);
-  overflow-x: hidden;
-  background: var(--bg); /* solid base only */
-}
+      /* Reset-ish */
+      * { box-sizing: border-box; }
+      html, body { height: 100%; }
 
-/* Fixed gradient layer to avoid iOS repaint/repeat artifacts */
-body::before {
-  content: "";
-  position: fixed;
-  inset: 0;
-  z-index: -2;
-  pointer-events: none;
-  background:
-    radial-gradient(1200px 800px at 20% 15%, rgba(0, 255, 200, 0.08), transparent 60%),
-    radial-gradient(900px 700px at 80% 20%, rgba(0, 140, 120, 0.12), transparent 55%),
-    var(--bg);
-}
+      body {
+        margin: 0;
+        font-family: "DM Sans", system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+        color: var(--text);
+        overflow-x: hidden;
+        background: var(--bg); /* solid base only */
+      }
 
+      /* Fixed gradient layer to avoid iOS repaint/repeat artifacts */
+      body::before {
+        content: "";
+        position: fixed;
+        inset: 0;
+        z-index: -2;
+        pointer-events: none;
+        background:
+          radial-gradient(1200px 800px at 20% 15%, rgba(0, 255, 200, 0.08), transparent 60%),
+          radial-gradient(900px 700px at 80% 20%, rgba(0, 140, 120, 0.12), transparent 55%),
+          var(--bg);
+      }
 
-    .page {
-  position: relative;
-  min-height: 100vh;
-  min-height: 100svh; /* iOS safe viewport */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: clamp(28px, 4vw, 56px) 18px;
-}
+      .page {
+        position: relative;
+        min-height: 100vh;
+        min-height: 100svh; /* iOS safe viewport */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: clamp(28px, 4vw, 56px) 18px;
+      }
 
+      /* Background icon */
+      .bg-icon {
+        position: absolute;
+        inset: 0;
+        pointer-events: none;
+        overflow: hidden;
+        z-index: 0;
+      }
+      .bg-icon img {
+        position: absolute;
+        right: -18%;
+        top: 8%;
+        width: min(720px, 92vw);
+        height: auto;
+        opacity: 0.10; /* requested 10% */
+        filter: saturate(1.05);
+      }
 
-    /* Background icon */
-    .bg-icon {
-      position: absolute;
-      inset: 0;
-      pointer-events: none;
-      overflow: hidden;
-    }
-    .bg-icon img {
-      position: absolute;
-      right: -18%;
-      top: 8%;
-      width: min(720px, 92vw);
-      height: auto;
-      opacity: 0.10; /* requested 10% */
-      transform: rotate(0deg);
-      filter: saturate(1.05);
-    }
+      .content {
+        width: 100%;
+        max-width: var(--maxw);
+        text-align: center;
+        position: relative;
+        z-index: 1;
+      }
 
-    .content {
-      width: 100%;
-      max-width: var(--maxw);
-      text-align: center;
-      position: relative;
-      z-index: 1;
-    }
+      .wordmark {
+        width: min(420px, 78vw);
+        height: auto;
+        display: block;
+        margin: 0 auto clamp(22px, 3.2vw, 34px);
+      }
 
-    .wordmark {
-      width: min(420px, 78vw);
-      height: auto;
-      display: block;
-      margin: 0 auto clamp(22px, 3.2vw, 34px);
-    }
+      h1 {
+        margin: 0 0 10px;
+        font-size: clamp(36px, 5vw, 56px);
+        line-height: 1.05;
+        font-weight: 900;   /* Black */
+        font-style: italic; /* Italic */
+        letter-spacing: -0.02em;
+      }
 
-    h1 {
-      margin: 0 0 10px;
-      font-size: clamp(36px, 5vw, 56px);
-      line-height: 1.05;
-      font-weight: 900;     /* Black */
-      font-style: italic;   /* Italic */
-      letter-spacing: -0.02em;
-    }
+      .subcopy {
+        margin: 0 auto;
+        max-width: 40ch;
+        font-size: clamp(15px, 2vw, 18px);
+        line-height: 1.45;
+        font-weight: 700;   /* Bold */
+        font-style: italic; /* Italic */
+        color: var(--muted);
+      }
 
-    .subcopy {
-      margin: 0 auto;
-      max-width: 40ch;
-      font-size: clamp(15px, 2vw, 18px);
-      line-height: 1.45;
-      font-weight: 700;   /* Bold */
-      font-style: italic; /* Italic */
-      color: var(--muted);
-    }
+      /* Single-column brand list container */
+      .brands {
+        margin: clamp(28px, 5vw, 52px) auto 0;
+        width: 100%;
+        max-width: 420px;   /* tidy, centered block */
+        text-align: center;
+      }
 
-    .brands {
-  margin: clamp(28px, 5vw, 52px) auto 0;
-  width: 100%;
-  max-width: 420px;   /* keeps it tidy */
-  text-align: center;
-}
+      .brand-list {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        width: 100%;
+        max-width: 420px; /* single column: allow full container width */
+        font-weight: 700;
+        font-style: italic;
+        font-size: clamp(16px, 1.9vw, 20px);
+        line-height: 1.5;
+        letter-spacing: -0.01em;
+        color: rgba(243, 245, 245, 0.88);
+      }
 
-.brands .divider { display: none; } /* in case any remains */
+      .brand-list li { margin: 4px 0; }
 
+      /* Mobile: keep it one column, just scale typography a touch */
+      @media (max-width: 640px) {
+        .brand-list {
+          font-size: 14px;
+          line-height: 1.45;
+        }
 
-.brand-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  width: 100%;
-  max-width: 220px;              /* keeps each column tidy */
-  font-weight: 700;
-  font-style: italic;
-  font-size: clamp(16px, 1.9vw, 20px);
-  line-height: 1.5;              /* slightly more even spacing */
-  letter-spacing: -0.01em;
-  color: rgba(243, 245, 245, 0.88);
-}
+        .bg-icon img {
+          right: -35%;
+          top: 14%;
+          width: min(680px, 120vw);
+        }
+      }
 
-.brand-list li { margin: 4px 0; }
+      @media (prefers-reduced-motion: reduce) {
+        * { scroll-behavior: auto; }
+      }
+    </style>
 
-/* Keep 2 columns on mobile (no stacking) */
-@media (max-width: 640px) {
-  .brands {
-    grid-template-columns: 1fr auto 1fr;
-    max-width: 94vw;
-    gap: 12px;
-  }
+    <main class="page" role="main">
+      <div class="bg-icon" aria-hidden="true">
+        <img src="Icon.svg" alt="" />
+      </div>
 
-  .brand-list {
-    max-width: none;
-    font-size: 14px;
-    line-height: 1.45;
-  }
+      <div class="content">
+        <img class="wordmark" src="Wordmark.svg" alt="Shoe Supplier" />
 
-  .divider {
-    min-height: 210px;
-  }
+        <h1>Coming soon...</h1>
+        <p class="subcopy">
+          We’re working on bringing top shoe brands<br />
+          direct to your door.
+        </p>
 
-  .bg-icon img {
-    right: -35%;
-    top: 14%;
-    width: min(680px, 120vw);
-  }
-}
+        <section class="brands" aria-label="Brands">
+          <ul class="brand-list">
+            <li>Brooks</li>
+            <li>Saucony</li>
+            <li>adidas</li>
+            <li>HOKA</li>
+            <li>New Balance</li>
+            <li>ASICS</li>
+            <li>Mizuno</li>
+            <li>INOV8</li>
+            <li>On</li>
+          </ul>
+        </section>
 
-
-    /* Respect reduced motion (nothing animated, but keeps things tidy if you add later) */
-    @media (prefers-reduced-motion: reduce) {
-      * { scroll-behavior: auto; }
-    }
-  </style>
-
-  <main class="page" role="main">
-    <div class="bg-icon" aria-hidden="true">
-      <img src="Icon.svg" alt="" />
-    </div>
-
-    <div class="content">
-      <img class="wordmark" src="Wordmark.svg" alt="Shoe Supplier" />
-
-      <h1>Coming soon...</h1>
-      <p class="subcopy">We’re working on bringing top shoe brands<br />direct to your door.</p>
-
-      <section class="brands one-col" aria-label="Brands">
-        <ul class="brand-list">
-          <li>Brooks</li>
-          <li>Saucony</li>
-          <li>adidas</li>
-          <li>HOKA</li>
-          <li>New Balance</li>
-          <li>ASICS</li>
-          <li>Mizuno</li>
-          <li>INOV8</li>
-          <li>On</li>
-        </ul>
-      </section>
-
-      <p></p>
-      <p class="subcopy">+ many more</p>
-    </div>
-  </main>
-</body>
-
+        <p class="subcopy" style="margin-top: 14px;">+ many more</p>
+      </div>
+    </main>
+  </body>
 </html>
