--- a/index.html
+++ b/index.html
@@ -109,16 +109,17 @@
 
       /* 3-column brands block */
       .brands {
-        margin: clamp(28px, 5vw, 52px) auto 0;
-        width: 100%;
-        max-width: 720px;
-        display: grid;
-        grid-template-columns: 1fr auto 1fr auto 1fr; /* col | divider | col | divider | col */
-        gap: clamp(14px, 2.5vw, 28px);
-        align-items: start;
-        justify-items: center;
-        text-align: center;
-      }
+  margin: clamp(28px, 5vw, 52px) auto 0;
+  width: 100%;
+  max-width: 720px;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr)); /* 3 equal columns */
+  gap: clamp(18px, 3vw, 56px);                      /* spacing between cols */
+  align-items: start;
+  justify-items: center;                            /* center each list */
+  text-align: center;
+}
+
 
       .brand-list {
         margin: 0;
